# PasTk-Cpp-Windows

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  animatedstackedwidget.cpp  animatedstackedwidget.h  app_win32.rc  attentiondialog.cpp  continuousdialog.h  continuousdialog.ui  data.cpp  datamodel.cpp  detailwindow.cpp  detailwindow.h  detailwindow.ui  home.cpp  home.h  home.ui  itemdelegate.cpp  main.cpp  mergedialog.cpp  mergedialog.h  pasteutil.cpp  pasteutil.h  selectiondialog.cpp  selectiondialog.h  selectiondialog.ui
src/: CMakeLists.txt  main.cpp  rc.qrc
src/data/: data.h  dataadapter.cpp  dataadapter.h  datamodel.cpp  datamodel.h  item.h  itemdelegate.h
src/resources/: rc.qrc
src/ui/: attentiondialog.cpp  attentiondialog.h  attentiondialog.ui  continuousdialog.cpp  continuousdialog.h  detailwindow.cpp  detailwindow.h  detailwindow.ui  home.cpp  home.h  home.ui  mergedialog.ui  selectiondialog.cpp  selectiondialog.h  windowhome.cpp  windowhome.h
src/utils/: buttonstatewatcher.cpp  buttonstatewatcher.h  opacitywatcher.cpp  opacitywatcher.h  pasteutil.h  shiftclickobserver.cpp  shiftclickobserver.h  singleton.hpp  windowx.cpp  windowx.h
src/widgets/: floatinformationlabel.cpp  floatinformationlabel.h  floatinformationlabel.ui  listviewofme.cpp  listviewofme.h  titlebarofme.cpp  titlebarofme.h  titlebarofme.ui
